@@ -12,7 +12,12 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
 public class SentryHandlerIT {
-    private static final Logger logger = Logger.getLogger(SentryHandlerIT.class.getName());
+    /*
+     We filter out loggers that start with `com.getsentry.raven`, so we deliberately
+     use a custom logger name here.
+     */
+    private static final Logger logger = Logger.getLogger("SentryHandlerIT: jul");
+    private static final Logger ravenLogger = Logger.getLogger(SentryHandlerIT.class.getName());
     private SentryStub sentryStub;
 
     @BeforeMethod
@@ -38,5 +43,12 @@ public class SentryHandlerIT {
         logger.log(Level.SEVERE, "This is an exception",
                 new UnsupportedOperationException("Test", new UnsupportedOperationException()));
         assertThat(sentryStub.getEventCount(), is(1));
+    }
+
+    @Test
+    public void testNoRavenLogging() throws Exception {
+        assertThat(sentryStub.getEventCount(), is(0));
+        ravenLogger.log(Level.SEVERE, "This is a test");
+        assertThat(sentryStub.getEventCount(), is(0));
     }
 }
